# litecv

./: LICENSE  README.md  setup.cfg  setup.py
docs/: api.md  usage.md
examples/: README.md  basic_image.py  camera_app.py  demo.py  filters_demo.py  logo_demo.py  object_detection.py  utilities.py  video_demo.py
litecv/: __init__.py  _litecv.py  setup.py
logo/: README.md  generate_logo.py  litecv_ascii.txt
tests/: test_examples.py  test_import.py
