[metadata]
name = litecv
version = 0.1.0
author = LiteCV Author
author_email = author@example.com
description = Lightweight computer vision library with camera support
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires =
    pygame>=2.6.1
    Pillow>=10.0.0
    numpy>=1.26.0

[options.packages.find]
where = .
